[gd_scene load_steps=19 format=3 uid="uid://cras0ddso0mfm"]

[ext_resource type="Material" uid="uid://cdxauypuneuvf" path="res://resource_instances/smooth_pixel_filter.tres" id="1_dgehg"]
[ext_resource type="Texture2D" uid="uid://dchks7euugmiq" path="res://assets/sprites/ClawSpriteSheet.png" id="1_pgiwg"]
[ext_resource type="Script" uid="uid://5lupmg4ij7us" path="res://addons/ropesim/RopeRendererLine2D.gd" id="2_0e6nn"]
[ext_resource type="Script" uid="uid://c5xhmymovtl1l" path="res://addons/soupik/modifications/soup_fabrik.gd" id="2_7kq02"]
[ext_resource type="Script" uid="uid://dnw3g1hpdxkkb" path="res://addons/soupik/utility/soup_bone.gd" id="2_leavr"]
[ext_resource type="Script" uid="uid://bwf1mx80kax57" path="res://addons/soupik/modifications/soup_group.gd" id="2_ukgaj"]
[ext_resource type="Script" uid="uid://d1whty1xl8wr7" path="res://addons/soupik/resources/zm_easing_params.gd" id="3_upo2r"]
[ext_resource type="Script" uid="uid://dmvgcp50idllb" path="res://addons/soupik/modifications/soup_look_at.gd" id="4_2mony"]
[ext_resource type="Script" uid="uid://jb4g5uiu5rai" path="res://addons/soupik/resources/zm_easing_rotational_params.gd" id="4_75gx6"]
[ext_resource type="Script" uid="uid://jn1kknwcoftm" path="res://addons/ropesim/RopeHandle.gd" id="4_b4inj"]
[ext_resource type="Script" uid="uid://dkjgprpxkwn8m" path="res://scripts/player/claw_controller.gd" id="5_pk2jo"]
[ext_resource type="Script" uid="uid://olvsb27nvtwt" path="res://addons/soupik/resources/zm_constraint_data.gd" id="9_lwyg2"]
[ext_resource type="Script" uid="uid://cjky2f8lqxgb2" path="res://addons/ropesim/Rope.gd" id="10_uftm1"]

[sub_resource type="Curve" id="Curve_dgehg"]
_data = [Vector2(0, 0.254454), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_w0y6g"]
colors = PackedColorArray(0, 0, 0, 1, 0.160784, 0.0784314, 0.117647, 1)

[sub_resource type="Resource" id="Resource_ens6v"]
script = ExtResource("3_upo2r")
frequency = 1.0
damping = 1.0
reaction = 1.0
gravity = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_vq8ak"]
script = ExtResource("4_75gx6")
velocity_effect = -10.0
params = SubResource("Resource_ens6v")

[sub_resource type="Resource" id="Resource_v28oh"]
script = ExtResource("9_lwyg2")
rotation_direction_degrees = -180.0
rotation_half_arc_degrees = 45.0
area_offset = Vector2(0, 0)
area_rotation_degrees = 0.0
proportions = Vector2(1, 1)

[node name="PlayerCursorArm" type="Node2D"]
texture_filter = 2
material = ExtResource("1_dgehg")

[node name="Rope" type="Node2D" parent="."]
position = Vector2(-367, -196)
scale = Vector2(1, 1)
script = ExtResource("10_uftm1")
num_segments = 64
rope_length = 640.0
damping = 0.8
num_constraint_iterations = 16
render_line = false
line_width = 10.0
color = Color(0.51641, 0, 0.174456, 1)
metadata/_custom_type_script = "uid://cjky2f8lqxgb2"

[node name="RopeRendererLine2D" type="Line2D" parent="Rope"]
points = PackedVector2Array(0, 0, 4.86462, 9.71397, 9.96207, 19.2726, 15.4465, 28.5652, 21.4216, 37.4889, 27.9742, 45.9262, 35.1903, 53.7241, 43.1513, 60.675, 51.9095, 66.5016, 61.4428, 70.86, 71.5946, 73.3912, 82.0422, 73.9184, 92, 73, 104.583, 79.2931, 117.211, 85.4604, 129.91, 91.4264, 142.698, 97.1377, 155.58, 102.559, 168.559, 107.668, 181.634, 112.451, 194.803, 116.896, 208.065, 121.002, 221.41, 124.788, 234.823, 128.304, 248.282, 131.642, 258, 134, 266.863, 139.248, 276.477, 142.922, 286.702, 144.124, 296.891, 142.554, 306.392, 138.512, 314.884, 132.615, 322.381, 125.496, 329, 118, 337.903, 122.931, 347.665, 125.764, 357.822, 125.469, 367.425, 122.144, 376, 117, 375.981, 128.53, 375.962, 140.022, 375.942, 151.463, 375.92, 162.837, 375.897, 174.136, 375.873, 185.351, 375.847, 196.476, 375.819, 207.506, 375.788, 218.438, 375.754, 229.27, 375.717, 240, 375.674, 250.627, 375.625, 261.15, 375.567, 271.57, 375.494, 281.884, 375.399, 292.092, 375.259, 302.195, 374.998, 312.193, 367.738, 318.97, 367.464, 308.778, 367.32, 298.506, 367.224, 288.171, 367.151, 277.795, 367.092, 267.397, 367.043, 257, 367, 247)
width = 16.0
width_curve = SubResource("Curve_dgehg")
gradient = SubResource("Gradient_w0y6g")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("2_0e6nn")
metadata/_custom_type_script = "uid://5lupmg4ij7us"

[node name="Sprites" type="Node2D" parent="."]
use_parent_material = true

[node name="Arm8" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-0.00017923, 117.002)
rotation = 1.05949e-05
scale = Vector2(0.999982, 0.999982)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-16, -8)
region_enabled = true
region_rect = Rect2(153, 7, 36, 151)

[node name="Arm6" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-10.9995, 137)
rotation = -3.14158
scale = Vector2(0.999982, 0.999982)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-16, -8)
region_enabled = true
region_rect = Rect2(153, 7, 36, 151)

[node name="Arm7" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(14.9997, 137.002)
rotation = -3.14158
scale = Vector2(0.999982, 0.999982)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-16, -8)
flip_h = true
region_enabled = true
region_rect = Rect2(153, 7, 36, 151)

[node name="Arm4" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-414, -243)
rotation = -0.790836
scale = Vector2(0.999993, 0.999993)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-8.86451, -6.01326)
region_enabled = true
region_rect = Rect2(66, 8, 23, 145)

[node name="Arm3" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-318.757, -153.007)
rotation = -0.970586
scale = Vector2(0.99999, 0.99999)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-11, -11)
region_enabled = true
region_rect = Rect2(91, 5, 25, 149)

[node name="Arm2" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-210.349, -81.2317)
rotation = -1.39579
scale = Vector2(0.999989, 0.999989)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-14, -13)
region_enabled = true
region_rect = Rect2(118, 3, 29, 155)

[node name="Arm1" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(-83.4948, -57.7866)
rotation = -2.13164
scale = Vector2(0.999985, 0.999985)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-16, -8)
region_enabled = true
region_rect = Rect2(153, 7, 36, 151)

[node name="Arm5" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(25.7426, -126.403)
rotation = 0.200907
scale = Vector2(0.999983, 0.999983)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-16, -8)
region_enabled = true
region_rect = Rect2(153, 7, 36, 151)

[node name="HandSprite" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
use_parent_material = true
position = Vector2(-414, -243)
scale = Vector2(0.999994, 0.999994)
texture = ExtResource("1_pgiwg")
centered = false
offset = Vector2(-51, -15)
vframes = 3
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 64, 192)

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(-414, -243)
script = ExtResource("5_pk2jo")

[node name="Arm4Bone" type="Bone2D" parent="Skeleton2D"]
rotation = -0.790836
scale = Vector2(0.999993, 0.999993)
rest = Transform2D(-0.279473, -0.960147, 0.960147, -0.279473, 0, 0)

[node name="Arm4RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone"]
remote_path = NodePath("../../../Sprites/Arm4")

[node name="Arm3Bone" type="Bone2D" parent="Skeleton2D/Arm4Bone"]
position = Vector2(3.00031, 131.001)
rotation = -0.17975
scale = Vector2(0.999997, 0.999997)
rest = Transform2D(-0.404304, 0.914624, -0.914624, -0.404304, 3.00031, 131.001)

[node name="Arm3RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone"]
remote_path = NodePath("../../../../Sprites/Arm3")

[node name="Arm2Bone" type="Bone2D" parent="Skeleton2D/Arm4Bone/Arm3Bone"]
position = Vector2(2.0003, 130.001)
rotation = -0.425203
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.715449, 0.698665, -0.698665, 0.715449, 2.0003, 130.001)

[node name="Arm2RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone"]
remote_path = NodePath("../../../../../Sprites/Arm2")

[node name="Arm1Bone" type="Bone2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone"]
position = Vector2(-0.999718, 129)
rotation = -0.735855
scale = Vector2(0.999996, 0.999996)
rest = Transform2D(0.999283, 0.0378308, -0.0378308, 0.999283, -0.999718, 129)

[node name="Arm1RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone"]
remote_path = NodePath("../../../../../../Sprites/Arm1")

[node name="Arm5Bone" type="Bone2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone"]
position = Vector2(0.00101638, 129.002)
rotation = 2.33255
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(0.586277, -0.81011, 0.81011, 0.586277, 0.00101638, 129.002)
auto_calculate_length_and_angle = false
length = 129.0
bone_angle = 90.0

[node name="Arm5RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone"]
remote_path = NodePath("../../../../../../../Sprites/Arm5")

[node name="Arm6Bone" type="Bone2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone"]
position = Vector2(0.00230598, 129.001)
rotation = -0.200896
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.586277, -0.81011, 0.81011, 0.586277, 0.00101638, 129.002)
auto_calculate_length_and_angle = false
length = 129.0
bone_angle = 90.0

[node name="Arm5RT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone/Arm6Bone"]
position = Vector2(-11.0003, 137.001)
rotation = 3.14159
remote_path = NodePath("../../../../../../../../Sprites/Arm6")

[node name="Arm5RT2" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone/Arm6Bone"]
position = Vector2(14.9994, 137.003)
rotation = 3.14159
remote_path = NodePath("../../../../../../../../Sprites/Arm7")

[node name="Arm5RT3" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone/Arm6Bone"]
position = Vector2(-0.000993848, 117.003)
remote_path = NodePath("../../../../../../../../Sprites/Arm8")

[node name="RopeHandle" type="Marker2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone/Arm6Bone"]
position = Vector2(-0.00149825, 50.9995)
script = ExtResource("4_b4inj")
strength = 1.0
rope_path = NodePath("../../../../../../../../Rope")
metadata/_custom_type_script = "uid://jn1kknwcoftm"

[node name="RopeHandle2" type="Marker2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone"]
position = Vector2(-6.94619, 49.7917)
script = ExtResource("4_b4inj")
strength = 1.0
rope_path = NodePath("../../../../../../../Rope")
rope_position = 0.602
metadata/_custom_type_script = "uid://jn1kknwcoftm"

[node name="RopeHandle3" type="Marker2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone"]
position = Vector2(-7.08223, 49.2775)
script = ExtResource("4_b4inj")
strength = 1.0
rope_path = NodePath("../../../../../../Rope")
rope_position = 0.52
metadata/_custom_type_script = "uid://jn1kknwcoftm"

[node name="RopeHandle4" type="Marker2D" parent="Skeleton2D/Arm4Bone/Arm3Bone/Arm2Bone"]
position = Vector2(-1.29159, 103.15)
script = ExtResource("4_b4inj")
strength = 1.0
rope_path = NodePath("../../../../../Rope")
rope_position = 0.4
metadata/_custom_type_script = "uid://jn1kknwcoftm"

[node name="RopeHandle5" type="Marker2D" parent="Skeleton2D/Arm4Bone/Arm3Bone"]
position = Vector2(-0.0478477, 53.0577)
script = ExtResource("4_b4inj")
strength = 1.0
rope_path = NodePath("../../../../Rope")
rope_position = 0.2
metadata/_custom_type_script = "uid://jn1kknwcoftm"

[node name="RopeRT" type="RemoteTransform2D" parent="Skeleton2D/Arm4Bone"]
position = Vector2(-0.361404, 66.4675)
rotation = 0.790836
scale = Vector2(1.00001, 1.00001)
remote_path = NodePath("../../../Rope")

[node name="SoupGroup" type="Node" parent="Skeleton2D"]
script = ExtResource("2_ukgaj")

[node name="SoupFABRIK" type="Node" parent="Skeleton2D/SoupGroup" node_paths=PackedStringArray("target_node", "chain_root", "chain_tip")]
script = ExtResource("2_7kq02")
target_node = NodePath("../../../ClawTarget")
enabled = true
chain_root = NodePath("../../Arm4Bone")
chain_tip = NodePath("../../Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone")
iterations = 8

[node name="SoupLookAt" type="Node" parent="Skeleton2D/SoupGroup" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("4_2mony")
target_node = NodePath("../../../ClawTarget")
enabled = true
bone_node = NodePath("../../HandBone")
look_at_mode = 1

[node name="SoupLookAt2" type="Node" parent="Skeleton2D/SoupGroup" node_paths=PackedStringArray("target_node", "bone_node")]
script = ExtResource("4_2mony")
target_node = NodePath("../../../ClawTarget/ClawTarget2")
enabled = true
bone_node = NodePath("../../Arm4Bone/Arm3Bone/Arm2Bone/Arm1Bone/Arm5Bone/Arm6Bone")

[node name="HandBone" type="Bone2D" parent="Skeleton2D"]
scale = Vector2(0.999994, 0.999994)
rest = Transform2D(0.999994, 4.44087e-16, -4.44087e-16, 0.999994, 0, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 180.0
script = ExtResource("2_leavr")
transform_mode = 0
ease_rotation = true
rotation_easing_params = SubResource("Resource_vq8ak")
limit_rotation = true
constraint_data = SubResource("Resource_v28oh")

[node name="HandRT" type="RemoteTransform2D" parent="Skeleton2D/HandBone"]
remote_path = NodePath("../../../Sprites/HandSprite")

[node name="ButtonGrabber" type="RemoteTransform2D" parent="Skeleton2D/HandBone"]
unique_name_in_owner = true
position = Vector2(-19.0001, 26.0002)
scale = Vector2(1.00001, 1.00001)
update_position = false
update_rotation = false
update_scale = false

[node name="CursorTarget" type="Node2D" parent="Skeleton2D"]
unique_name_in_owner = true
position = Vector2(-16, 20)

[node name="ClawTarget" type="Marker2D" parent="."]

[node name="ClawTarget2" type="Marker2D" parent="ClawTarget"]
position = Vector2(0, 193)
